--- a/Loboteca1/Views/Mecatronica/Mecatronica.cshtml
+++ b/Loboteca1/Views/Mecatronica/Mecatronica.cshtml
@@ -70,7 +70,7 @@
                     </div>
                     <div class="magazine">
                         <img src="~/images/mecatr3.jpg" alt="Revista 3">
-                        <p class="available">Disponible</p>
+                        <p class="available">Hola</p>
                     </div>
                 </div>
                 <button class="next" onclick="moveCarouselMagazines(1)">&#10095;</button>
