--- a/Loboteca1/Views/Info_user/Info_user.cshtml
+++ b/Loboteca1/Views/Info_user/Info_user.cshtml
@@ -52,6 +52,33 @@
                     <button class="btn-option" id="changePassword">Cambiar Contraseña</button>
                 </div>
             </div>
+
+            <!-- Burbuja flotante de adeudos -->
+            <div class="burbuja-adeudos" onclick="mostrarAdeudos()">
+                <p>Tienes adeudos</p>
+            </div>
+
+            <!-- Recuadro flotante de sanciones (inicialmente oculto) -->
+            <div class="adeudos-flotante" id="adeudosFlotante" style="display: none;">
+                <h4>Detalles de Sanciones</h4>
+                <table class="tabla-sanciones">
+                    <thead>
+                        <tr>
+                            <th>Libro</th>
+                            <th>Retraso</th>
+                            <th>Sanción</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>El Quijote</td>
+                            <td>2 Días</td>
+                            <td>$30</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <button class="btn-cerrar" onclick="cerrarAdeudos()">Cerrar</button>
+            </div>
         </div>
     </main>
 
@@ -65,6 +92,14 @@
         </div>
     </footer>
 
-    <script src="~/js/usuario.js"></script>
+    <script>
+        function mostrarAdeudos() {
+            document.getElementById("adeudosFlotante").style.display = "block";
+        }
+
+        function cerrarAdeudos() {
+            document.getElementById("adeudosFlotante").style.display = "none";
+        }
+    </script>
 </body>
 </html>
