--- a/Loboteca1/Views/Mecatronica/Mecatronica.cshtml
+++ b/Loboteca1/Views/Mecatronica/Mecatronica.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingeniería en Mecatronica - Loboteca</title>
+    <title>Ingeniería en Mecatronica - Lobotecaa</title>
     <link rel="stylesheet" href="~/css/mecatronica.css">
 </head>
 <body>
