--- a/Loboteca1/Views/Altas/Altas.cshtml
+++ b/Loboteca1/Views/Altas/Altas.cshtml
@@ -13,7 +13,7 @@
 <body>
 
     <nav class="navbar">
-
+        
     </nav>
 
     <!-- Barra de navegación secundaria -->
@@ -70,6 +70,9 @@
 
                 <label for="genero">Género</label>
                 <input type="text" id="genero" name="genero">
+
+                <label for="fechaAlta">Fecha de Alta</label>
+                <input type="date" id="fechaAlta" name="fechaAlta">
 
                 <div class="botones">
                     <button class="btn-subir">SUBIR</button>
