Menu desplegable en seccion de sanciones

--- a/Loboteca1/Views/Sanciones/Sanciones.cshtml
+++ b/Loboteca1/Views/Sanciones/Sanciones.cshtml
@@ -9,15 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sanciones - Loboteca</title>
     <link rel="stylesheet" href="~/css/sanciones.css"> <!-- Referencia al CSS -->
+    <!-- Incluir el archivo de JavaScript -->
+    
 </head>
 <body>
+
     <!-- Barra de navegación -->
     <header>
-
-        <nav class="navbar">
-
-        </nav>
-
+        <nav class="navbar"></nav>
         <nav class="navbar2">
             <ul>
                 <li>
@@ -32,6 +31,9 @@
                         <li><a href="#">Industrial</a></li>
                         <li><a href="#">Mecatrónica</a></li>
                         <li><a href="#">Energía</a></li>
+                        <li><a href="#">Biotecnología</a></li>
+                        <li><a href="#">Mecánica</a></li>
+                        <li><a href="#">Tecnologías de la Información</a></li>
                     </ul>
                 </li>
                 <li>
@@ -75,6 +77,8 @@
         <p>&copy; Derechos Reservados Universidad Politécnica del Valle de Toluca</p>
     </footer>
 
+    
+    <script src="@Url.Content("~/js/submenu.js")"></script>
 
 </body>
 </html>
