Actualizaciones en menú desplegable

--- a/Loboteca1/Views/Sanciones/Sanciones.cshtml
+++ b/Loboteca1/Views/Sanciones/Sanciones.cshtml
@@ -27,13 +27,13 @@
                     <img src="~/images/carrera.png" alt="Carrera" class="icon" id="carreraMenu">
                     <a href="javascript:void(0);" onclick="toggleSubMenu()">Carrera</a> <!-- Activa el submenú al hacer clic -->
                     <ul class="submenu" id="submenuCarrera">
-                        <li><a href="#">Negocios Internacionales</a></li>
-                        <li><a href="#">Industrial</a></li>
-                        <li><a href="#">Mecatrónica</a></li>
-                        <li><a href="#">Energía</a></li>
-                        <li><a href="#">Biotecnología</a></li>
-                        <li><a href="#">Mecánica</a></li>
-                        <li><a href="#">Tecnologías de la Información</a></li>
+                        <li><a href="@Url.Action("Negocios", "Negocios")">Negocios Internacionales</a></li>
+                        <li><a href="@Url.Action("Industri", "Industri")">Industrial</a></li>
+                        <li><a href="@Url.Action("Mecatronica", "Mecatronica")">Mecatrónica</a></li>
+                        <li><a href="@Url.Action("Energia", "Energia")">Energía</a></li>
+                        <li><a href="@Url.Action("Biotecnologia", "Biotecnologia")">Biotecnología</a></li>
+                        <li><a href="@Url.Action("Mecanica", "Mecanica")">Mecánica</a></li>
+                        <li><a href="@Url.Action("Tecnologias", "Tecnologias")">Tecnologías de la Información</a></li>
                     </ul>
                 </li>
                 <li>
