--- a/Loboteca1/Views/Altas/Altas.cshtml
+++ b/Loboteca1/Views/Altas/Altas.cshtml
@@ -26,14 +26,15 @@
             <li>
                 <img src="~/images/carrera.png" alt="Carrera" class="icono" id="carreraMenu">
                 <a href="javascript:void(0);" onclick="toggleSubMenu()">Carrera</a>
-                <!--<ul class="submenu" id="submenuCarrera">
-                    <li><a href="#">Negocios Internacionales</a></li>
-                    <li><a href="#">Industrial</a></li>
-                    <li><a href="#">Mecatrónica</a></li>
-                    <li><a href="#">Energía</a></li>
-                    <li><a href="#">Biotecnología</a></li>
-                    <li><a href="#">ITI</a></li>
-                            </ul>-->
+                <ul class="submenu" id="submenuCarrera">
+                    <li><a href="@Url.Action("Negocios", "Negocios")">Negocios Internacionales</a></li>
+                    <li><a href="@Url.Action("Industri", "Industri")">Industrial</a></li>
+                    <li><a href="@Url.Action("Mecatronica", "Mecatronica")">Mecatrónica</a></li>
+                    <li><a href="@Url.Action("Energia", "Energia")">Energía</a></li>
+                    <li><a href="@Url.Action("Biotecnologia", "Biotecnologia")">Biotecnología</a></li>
+                    <li><a href="@Url.Action("Mecanica", "Mecanica")">Mecánica</a></li>
+                    <li><a href="@Url.Action("Tecnologias", "Tecnologias")">Tecnologías de la Información</a></li>
+                </ul>
             </li>
             <li>
                 <img src="~/images/inventario.png" alt="Inventario" class="icono">
@@ -93,6 +94,9 @@
     <footer>
         <p>&copy; Derechos Reservados Universidad Politécnica del Valle de Toluca</p>
     </footer>
+
+    <script src="@Url.Content("~/js/submenu.js")"></script>
+
 
 </body>
 </html>
