--- a/Loboteca1/Views/Mecanica/Mecanica.cshtml
+++ b/Loboteca1/Views/Mecanica/Mecanica.cshtml
@@ -14,15 +14,15 @@
     <!-- Barra de navegación -->
     <header>
         <nav class="navbar">
-            <!-- Contenido adicional si es necesario -->
+            <h1>MECANICA</h1>
         </nav>
 
         <nav class="navbar2">
             <ul>
                 <li><img src="~/images/libros_n.png" alt="Libros" class="libros"> <a href="#">Libros</a></li>
-                <li><img src="~/images/contacto_n.png" alt="Contacto" class="contacto"><a href="#">Contacto</a></li>
-                <li><img src="~/images/nosotros.png" alt="Nosotros" class="nosotros"><a href="#">Nosotros</a></li>
-                <li><img src="~/images/login_n.png" alt="Perfil" class="perfil"><a href="@Url.Action("Login", "Login")">Perfil</a></li>
+                <li><img src="~/images/revistaMecatro.png" alt="Revistas" class="revistas"><a href="#">Revistas</a></li>
+                <li><img src="~/images/sancionMecatro.png" alt="Sanciones" class="sanciones"><a href="@Url.Action("Sanciones", "Sanciones")">sanciones</a></li>
+                <li><img src="~/images/login_a.png" alt="Perfil" class="perfil"><a href="@Url.Action("Info_user", "Info_user")">Perfil</a></li>
             </ul>
         </nav>
     </header>
