--- a/Loboteca1/Views/Mecatronica/Mecatronica.cshtml
+++ b/Loboteca1/Views/Mecatronica/Mecatronica.cshtml
@@ -20,9 +20,9 @@
         <nav class="navbar2">
             <ul>
                 <li><img src="~/images/libros_gri.png" alt="Libros" class="libros"> <a href="#">Libros</a></li>
-                <li><img src="~/images/contacto_gri.png" alt="Contacto" class="contacto"><a href="#">Contacto</a></li>
-                <li><img src="~/images/nosotros.png" alt="Nosotros" class="nosotros"><a href="#">Nosotros</a></li>
-                <li><img src="~/images/login_gri.png" alt="Perfil" class="perfil"><a href="@Url.Action("Login", "Login")">Perfil</a></li>
+                <li><img src="~/images/revistasMECA.png" alt="Revistas" class="revistas"><a href="#">Revistas</a></li>
+                <li><img src="~/images/castigoMeca.png" alt="Sanciones" class="sanciones"><a href="@Url.Action("Sanciones", "Sanciones")">sanciones</a></li>
+                <li><img src="~/images/login_gri.png" alt="Perfil" class="perfil"><a href="@Url.Action("Info_user", "Info_user")">Perfil</a></li>
             </ul>
         </nav>
     </header>
