--- a/Loboteca1/Views/Tecnologias/Tecnologias.cshtml
+++ b/Loboteca1/Views/Tecnologias/Tecnologias.cshtml
@@ -7,22 +7,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingeniería en Mecatronica - Lobotecaa</title>
+    <title>Ingeniería en Tecnologías de la Información - Lobotecaa</title>
     <link rel="stylesheet" href="~/css/tecnologias.css">
 </head>
 <body>
     <!-- Barra de navegación -->
     <header>
         <nav class="navbar">
-            <!-- Contenido adicional si es necesario -->
+            <h1>TECNOLOGÍAS DE LA INFORMACIÓN</h1>
         </nav>
 
         <nav class="navbar2">
             <ul>
-                <li><img src="~/images/libros_gri.png" alt="Libros" class="libros"> <a href="#">Libros</a></li>
-                <li><img src="~/images/contacto_gri.png" alt="Contacto" class="contacto"><a href="#">Contacto</a></li>
-                <li><img src="~/images/nosotros.png" alt="Nosotros" class="nosotros"><a href="#">Nosotros</a></li>
-                <li><img src="~/images/login_gri.png" alt="Perfil" class="perfil"><a href="@Url.Action("Login", "Login")">Perfil</a></li>
+                <li><img src="~/images/libros_az.png" alt="Libros" class="libros"> <a href="#">Libros</a></li>
+                <li><img src="~/images/revista_az.png" alt="Revistas" class="Revistas"><a href="#">Revistas</a></li>
+                <li><img src="~/images/sanciones_az.png" alt="Sanciones" class="sanciones"><a href="" @Url.Action("Sanciones", "Sanciones")"">Sanciones</a></li>
+                <li><img src="~/images/login_az.png" alt="Perfil" class="perfil"><a href="@Url.Action("Login", "Login")">Perfil</a></li>
             </ul>
         </nav>
     </header>
@@ -37,15 +37,15 @@
                 <button class="prev" onclick="moveCarousel(-1)">&#10094;</button>
                 <div class="carousel">
                     <div class="book">
-                        <img src="~/images/mecatr1.jpg" alt="Libro 1">
+                        <img src="~/images/tec1.jpg" alt="Libro 1">
                         <p class="available">Disponible</p>
                     </div>
                     <div class="book">
-                        <img src="~/images/mecatr2.jpg" alt="Libro 2">
+                        <img src="~/images/tec2.jpg" alt="Libro 2">
                         <p class="available">Disponible</p>
                     </div>
                     <div class="book">
-                        <img src="~/images/mecatr3.jpg" alt="Libro 3">
+                        <img src="~/images/tec3.jpg" alt="Libro 3">
                         <p class="available">Disponible</p>
                     </div>
                 </div>
@@ -61,15 +61,15 @@
                 <button class="prev" onclick="moveCarouselMagazines(-1)">&#10094;</button>
                 <div class="carousel">
                     <div class="magazine">
-                        <img src="~/images/mecatr3.jpg" alt="Revista 1">
+                        <img src="~/images/tec4.jpg" alt="Revista 1">
                         <p class="available">Disponible</p>
                     </div>
                     <div class="magazine">
-                        <img src="~/images/mecatr3.jpg" alt="Revista 2">
+                        <img src="~/images/tec4.jpg" alt="Revista 2">
                         <p class="available">Disponible</p>
                     </div>
                     <div class="magazine">
-                        <img src="~/images/mecatr3.jpg" alt="Revista 3">
+                        <img src="~/images/tec4.jpg" alt="Revista 3">
                         <p class="available">Disponible</p>
                     </div>
                 </div>
