--- a/Loboteca1/wwwroot/css/tecnologias.css
+++ b/Loboteca1/wwwroot/css/tecnologias.css
@@ -2,21 +2,27 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background-color: #f2f2f2; /* Fondo neutral */
 }
 
 /* Barra de navegación */
 .navbar {
     background-color: #003366; /* Color azul oscuro para el menú superior */
-    padding: 40px;
+    padding: 20px;
     text-align: center;
 }
+
+    .navbar h1 {
+        font-size: 30px;
+        color: white;
+    }
 
 .navbar2 {
     padding-top: 50px;
     padding: 10px;
     text-align: center;
     background-color: #e6e6e6; /* Color gris claro para el menú secundario */
+    margin-top: 1cm;
 }
 
     .navbar2 ul {
@@ -50,7 +56,7 @@ body {
             }
 
                 .navbar2 ul li a:hover {
-                    background-color: #b3c6e0; /* Un azul claro al pasar el ratón */
+                    background-color: #00CC99; /* Cian al pasar el ratón */
                     border-radius: 5px;
                 }
 
@@ -63,6 +69,7 @@ body {
     width: 200px;
     margin: 0 auto;
     border-radius: 5px;
+    margin-top: 2cm;
 }
 
 /* Carousel Styles */
