--- a/Loboteca1/Views/Inicio.cshtml
+++ b/Loboteca1/Views/Inicio.cshtml
@@ -19,10 +19,9 @@
 
         <nav class="navbar2">
             <ul>
-                <li><img src="~/images/libros.png" alt="libros" class="libros"> <a href="#">Libros</a></li>
-                <li><img src="~/images/contacto.png" alt="Contacto" class="contacto"><a href="#">Contacto</a></li>
-                <li><img src="~/images/nosotros.png" alt="nosotros" class="nosotros"><a href="#">Nosotros</a></li>
-                <li><img src="~/images/login.png" alt="perfil" class="perfil"><a href="@Url.Action("Login", "Login")">Perfil</a></li>
+                <li><img src="~/images/libros.png" alt="Libros Electronicos" class="libros"><a href="@Url.Action("Libros", "Libros")">Libros</a></li>
+                <li><img src="~/images/sanciones.png" alt="Sanciones" class="sanciones"><a href="@Url.Action("Sanciones", "Sanciones")">sanciones</a></li>
+                <li><img src="~/images/login.png" alt="Perfil" class="perfil"><a href="@Url.Action("Info_user", "Info_user")">Perfil</a></li>
             </ul>
         </nav>
     </header>
