--- a/Loboteca1/Views/Negocios/Negocios.cshtml
+++ b/Loboteca1/Views/Negocios/Negocios.cshtml
@@ -20,9 +20,9 @@
         <nav class="navbar2">
             <ul>
                 <li><img src="~/images/libros_mor.png" alt="Libros" class="libros"> <a href="#">Libros</a></li>
-                <li><img src="~/images/revista_ne.png" alt="Revistas" class="Revistas"><a href="#">Revistas</a></li>
-                <li><img src="~/images/sancionesN.png" alt="Sanciones" class="sanciones"><a href="" @Url.Action("Sanciones", "Sanciones")"">Sanciones</a></li>
-                <li><img src="~/images/login_mor.png" alt="Perfil" class="perfil"><a href="@Url.Action("Login", "Login")">Perfil</a></li>
+                <li><img src="~/images/revista_ne.png" alt="Revistas" class="Revistas"><a href="#revistas">Revistas</a></li>
+                <li><img src="~/images/sancionesN.png" alt="Sanciones" class="sanciones"><a href="@Url.Action("Sanciones", "Sanciones")">Sanciones</a></li>
+                <li><img src="~/images/login_mor.png" alt="Perfil" class="perfil"><a href="@Url.Action("Info_user", "Info_user")">Perfil</a></li>
             </ul>
         </nav>
     </header>
@@ -55,7 +55,7 @@
         </section>
 
 
-        <section class="magazines-section">
+        <section class="magazines-section" id="revistas">
             <div class="section-title">
                 <h2>Revistas</h2>
             </div>
