--- a/Loboteca1/wwwroot/css/tecnologias.css
+++ b/Loboteca1/wwwroot/css/tecnologias.css
@@ -56,7 +56,7 @@ body {
             }
 
                 .navbar2 ul li a:hover {
-                    background-color: #00CC99; /* Cian al pasar el ratón */
+                    background-color:cornflowerblue; /* Cian al pasar el ratón */
                     border-radius: 5px;
                 }
 
