Estilos a ventanas CRUD

--- a/Loboteca1/Views/Administrador/Delete.cshtml
+++ b/Loboteca1/Views/Administrador/Delete.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Eliminar Administrador";
 }
 
+<head>
+<link rel="stylesheet" href="~/css/AdministradorIndex.css" />
+</head>
+
 <h2>@ViewData["Title"]</h2>
 
 <h3>¿Seguro que desea eliminar este administrador?</h3>
