--- a/Loboteca1/Views/Administrador/Index.cshtml
+++ b/Loboteca1/Views/Administrador/Index.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Lista de Administradores";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/AdministradorIndex.css" />
+</head>
+
 <h2>@ViewData["Title"]</h2>
 
 <table class="table">
