--- a/Loboteca1/Views/Autor/Create.cshtml
+++ b/Loboteca1/Views/Autor/Create.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Crear Nuevo Autor";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/AutorCreate.css" />
+</head>
+
 <h2>@ViewData["Title"]</h2>
 
 <form asp-action="Create" method="post">
