--- a/Loboteca1/Views/Autor/Delete.cshtml
+++ b/Loboteca1/Views/Autor/Delete.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Eliminar Autor";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/AutorCreate.css" />
+</head>
+
 <h2>@ViewData["Title"]</h2>
 
 <h3>¿Está seguro de que desea eliminar este autor?</h3>
