--- a/Loboteca1/Views/Autor/Index.cshtml
+++ b/Loboteca1/Views/Autor/Index.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Listado de Autores";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/AutorIndex.css" />
+</head>
+
 <h2>@ViewData["Title"]</h2>
 
 <p>
