--- a/Loboteca1/Views/Administrador/Create.cshtml
+++ b/Loboteca1/Views/Administrador/Create.cshtml
@@ -4,36 +4,40 @@
     ViewData["Title"] = "Crear Nuevo Administrador";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/AdministradorCreate.css" />
+</head>
+
 <h2>@ViewData["Title"]</h2>
 
 <form asp-action="Create" method="post">
     <div class="form-group">
-        <label asp-for="Nombre" class="control-label"></label>
+        <label asp-for="Nombre" class="control-label">Nombre</label>
         <input asp-for="Nombre" class="form-control" />
         <span asp-validation-for="Nombre" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="apellido_paterno" class="control-label"></label>
+        <label asp-for="apellido_paterno" class="control-label">Apellido Paterno</label>
         <input asp-for="apellido_paterno" class="form-control" />
         <span asp-validation-for="apellido_paterno" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="apellido_materno" class="control-label"></label>
+        <label asp-for="apellido_materno" class="control-label">Apellido Materno</label>
         <input asp-for="apellido_materno" class="form-control" />
         <span asp-validation-for="apellido_materno" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="numero_de_empleado" class="control-label"></label>
+        <label asp-for="numero_de_empleado" class="control-label">No.Empleado</label>
         <input asp-for="numero_de_empleado" class="form-control" />
         <span asp-validation-for="numero_de_empleado" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="fecha_de_inicio" class="control-label"></label>
+        <label asp-for="fecha_de_inicio" class="control-label">Fecha de inico</label>
         <input asp-for="fecha_de_inicio" type="date" class="form-control" />
         <span asp-validation-for="fecha_de_inicio" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="fecha_de_termino" class="control-label"></label>
+        <label asp-for="fecha_de_termino" class="control-label">Fecha de termino</label>
         <input asp-for="fecha_de_termino" type="date" class="form-control" />
         <span asp-validation-for="fecha_de_termino" class="text-danger"></span>
     </div>
