--- a/Loboteca1/Views/Carrera/Delete.cshtml
+++ b/Loboteca1/Views/Carrera/Delete.cshtml
@@ -12,21 +12,21 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre_de_la_carrera)
+            @Html.DisplayNameFor(model => model.nombre_de_la_carrera)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Nombre_de_la_carrera)
+            @Html.DisplayFor(model => model.nombre_de_la_carrera)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado.Nombre)
+            Estado
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Estado.Nombre)
+            @Html.DisplayFor(model => model.estado)
         </dd>
     </dl>
 
     <form asp-action="Delete" method="post">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="id" />
         <input type="submit" value="Eliminar" class="btn btn-danger" /> |
         <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
     </form>
