--- a/Loboteca1/Views/Carrera/Edit.cshtml
+++ b/Loboteca1/Views/Carrera/Edit.cshtml
@@ -8,15 +8,18 @@
 
 <form asp-action="Edit" method="post">
     <div class="form-group">
-        <label asp-for="Nombre_de_la_carrera" class="control-label">Nombre de la Carrera</label>
-        <input asp-for="Nombre_de_la_carrera" class="form-control" />
-        <span asp-validation-for="Nombre_de_la_carrera" class="text-danger"></span>
+        <label asp-for="nombre_de_la_carrera" class="control-label">Nombre de la Carrera</label>
+        <input asp-for="nombre_de_la_carrera" class="form-control" />
+        <span asp-validation-for="nombre_de_la_carrera" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Id_estado" class="control-label">Estado</label>
-        <select asp-for="Id_estado" class="form-control" asp-items="ViewBag.EstadoId"></select>
-        <span asp-validation-for="Id_estado" class="text-danger"></span>
+        <label asp-for="estado" class="control-label">Estado</label>
+        <select asp-for="estado" class="form-control">
+            <option value="Disponible">Disponible</option>
+            <option value="No disponible">No disponible</option>
+        </select>
+        <span asp-validation-for="estado" class="text-danger"></span>
     </div>
 
     <div class="form-group">
