--- a/Loboteca1/Views/Editorial/Create.cshtml
+++ b/Loboteca1/Views/Editorial/Create.cshtml
@@ -14,9 +14,14 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="Id_Estado" class="control-label">Estado</label>
-        <select asp-for="Id_Estado" class="form-control" asp-items="ViewBag.EstadoId"></select>
-        <span asp-validation-for="Id_Estado" class="text-danger"></span>
+        <label asp-for="Estado" class="control-label">Estado</label>
+        <select asp-for="Estado" class="form-control">
+            @foreach (var estado in ViewBag.Estados)
+            {
+                <option value="@estado">@estado</option>
+            }
+        </select>
+        <span asp-validation-for="Estado" class="text-danger"></span>
     </div>
 
     <div class="form-group">
