--- a/Loboteca1/Views/Editorial/Edit.cshtml
+++ b/Loboteca1/Views/Editorial/Edit.cshtml
@@ -14,9 +14,12 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="Id_Estado" class="control-label">Estado</label>
-        <select asp-for="Id_Estado" class="form-control" asp-items="ViewBag.EstadoId"></select>
-        <span asp-validation-for="Id_Estado" class="text-danger"></span>
+        <label asp-for="Estado" class="control-label">Estado</label>
+        <select asp-for="Estado" class="form-control">
+            <option value="Disponible">Disponible</option>
+            <option value="No disponible">No disponible</option>
+        </select>
+        <span asp-validation-for="Estado" class="text-danger"></span>
     </div>
 
     <div class="form-group">
@@ -25,5 +28,5 @@
 </form>
 
 <div>
-    <a asp-action="Index">Volver a la lista</a>
+    <a asp-action="Index" class="btn btn-secondary">Volver a la lista</a>
 </div>
