--- a/Loboteca1/Views/Administrador/Index.cshtml
+++ b/Loboteca1/Views/Administrador/Index.cshtml
@@ -17,10 +17,15 @@
     <!-- Encabezado principal -->
     <header>
         <nav class="navbar">
-            <h1>Loboteca1</h1>
-            <ul>
+            <ul class="logo-left">
                 <li>
-                    <img src="~/images/login.png" alt="Cuenta" class="icono">
+                    <img src="~/images/logo.png" alt="Logo" class="logo">
+                </li>
+            </ul>
+            <h1>LOBOTECA</h1>
+            <ul class="account-right">
+                <li>
+                    <img src="~/images/cuenta.png" alt="Cuenta" class="icono">
                     <a href="@Url.Action("Perfil", "Perfil")">Cuenta</a>
                 </li>
             </ul>
